# wdrvr

./: CMakeLists.txt  ChartPage.qml  FloatingMenu.qml  LoadingScreen.qml  Main.qml  MapLegend.qml  PlacesMap.qml  README.md  SettingsPanel.qml  iconmodel.cpp  iconmodel.h  icons.qrc  locationmodel.cpp  locationmodel.h  main.cpp  rename_icons.sh
icons/glyph/: index.theme
icons/svgrepo/: index.theme
icons/win11/: index.theme
